[tool.poetry]
name = "globalpayments-python-service"
version = "0.1.0"
description = "wrapper for GPL licensed code in TriplePlayPay/globalpayments-python-sdk"
authors = ["Your Name <you@example.com>"]
license = "GPL-2.0-only"
readme = "README.md"
packages = [
    { include = "service" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
sanic = "^23.12.1"
xmltodict = ">= 0.9.0"
jsonpickle = ">= 0.6.1"
enum34 = ">= 1.1.6"
urllib3 = { version = ">= 1.18, <2", extras = ["secure"] }
certifi = ">= 2016.9.26"
pyopenssl = ">= 17.5.0"
iniconfig = "2.0.0"
packaging = "24.0"
pluggy = "1.4.0"
pytest = "8.1.1"
globalpayments-api = { git = "https://github.com/TriplePlayPay/globalpayments-python-sdk.git", branch = "main" }
python-json-logger = "^2.0.7"
sanic-ext = "^23.12.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
aiohttp = "^3.9.4"
sanic-testing = "^23.12.0"
setuptools = "^69.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
